--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,17 @@
-asgiref
-Django
-django-crispy-forms
-Pillow
-pytz
-sqlparse
+asgiref==3.5.0
+distlib==0.3.4
+dj-database-url==0.5.0
+Django==2.2.6
+django-crispy-forms==1.7.2
+django-filter==21.1
+djangorestframework==3.13.1
+filelock==3.7.0
+Markdown==3.3.6
+platformdirs==2.5.2
+psycopg2-binary==2.9.3
+python-decouple==3.6
+pytz==2019.3
+six==1.16.0
+sqlparse==0.3.0
+tzdata==2022.1
+virtualenv==20.14.1
